# external-flow-sirius

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  analyze_epsilon_h.py  epsilon_error_analysis.csv  output_with_centers.vtk  output_with_centers.vtp  plot_epsilon_error.py  plot_kernel_comparison.py  plot_linearization.py  vtk_leak_suppression.txt
.claude/: settings.local.json
docs/: vtk.txt
examples/: error_analysis_example.cpp  plot_generator_example.cpp  sphere_error_analysis_example.cpp  sphere_generator_example.cpp  visualizer_example.cpp
include/: attach_f.h  functions.h  geometry.h  kernels.h  plot_generator.h  sphere_generator.h  utils.h  vector_3d.h  visualizer.h
meshes/: sphere_162.vtk  sphere_642.vtk  sphere_642_w_fields.vtp
presentation/tex_presentation/: main.tex
scripts/: run
src/: attach_f.cpp  functions.cpp  geometry.cpp  main.cpp  plot_generator.cpp  sphere_generator.cpp  utils.cpp  visualizer.cpp
